--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -1,25 +1,61 @@
 {% extends 'base_content_without_message.html' %}
 {% block content %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static '/css/dashboard.csschang' %}">
+<link rel="stylesheet" type="text/css" href="{% static '/css/dashboard.css' %}">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static '/js/dashboard.js' %}"></script>
 
-<a class="btn btn-lik btn-lg" href="#" role="button">
 <div class="container text-center">
   <div class="row">
+    <div class="table-responsive">
       <table class="table table-light table-bordered" id="dataTable">
         <thead>
             <tr>
                 <th scope="col">
                     <input class="form-check-input" type="checkbox" value="" id="selectAll">
                 </th>
-                <th scope="col">ID</th>
-                <th scope="col">File Name</th>
-                <th scope="col">Owner</th>
-                <th scope="col">Uploaded At</th>
-                <th scope="col">Comment</th>
-                <th scope="col">Size</th>
+                <th scope="col">
+                    ID
+                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
+                      <button type="button" class="btn btn-outline-success btn-sm "><i class="bi bi-caret-up"></i></button>
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    </div>
+                </th>
+                <th scope="col">
+                    File Name
+                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    </div>
+                </th>
+                <th scope="col">
+                    Owner
+                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    </div>
+                </th>
+                <th scope="col">
+                    Uploaded At
+                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    </div>
+                </th>
+                <th scope="col">
+                    Comment
+                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    </div>
+                </th>
+                <th scope="col">
+                    Size
+                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
+                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    </div>
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -38,14 +74,13 @@
                     <td>-</td>
                 {% endif %}
                 <td>{{ upload.file_size_mb }} Mb</td>
-
             </tr>
         {% endfor %}
         </tbody>
     </table>
+    </div>
   </div>
 </div>
-</a>
 
 
 {% endblock %}
