--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -16,44 +16,44 @@
                 </th>
                 <th scope="col">
                     ID
-                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
-                      <button type="button" class="btn btn-outline-success btn-sm "><i class="bi bi-caret-up"></i></button>
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
                     </div>
                 </th>
                 <th scope="col">
                     File Name
-                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
                     </div>
                 </th>
                 <th scope="col">
                     Owner
-                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
                     </div>
                 </th>
                 <th scope="col">
                     Uploaded At
-                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
                     </div>
                 </th>
                 <th scope="col">
                     Comment
-                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
                     </div>
                 </th>
                 <th scope="col">
                     Size
-                    <div class="btn-group-vertical gap-1 mx-auto" role="group" aria-label="Vertical button group">
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-up"></i></button>
-                      <button type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-caret-down"></i></button>
+                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                        <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
                     </div>
                 </th>
             </tr>
