--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -8,90 +8,107 @@
 <head>
     <title>Dashboard</title>
     <h1><strong>Dashboard</strong></h1>
-    <br>
-    <h6><strong>Details:</strong></h6>
 </head>
-<a href="#" class="btn-outline-light" role="presentation">
-    <div class="container text-center">
-      <div class="row">
-        <div class="table-responsive">
-          <table class="table table-light table-bordered" id="dataTable">
-            <thead>
-                <tr>
-                    <th scope="col">
-                        <input class="form-check-input" type="checkbox" value="" id="selectAll">
-                    </th>
+<body>
 
-                    <th scope="col">
-                        ID
-                        <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
-                        </div>
-                    </th>
-                    <th scope="col">
-                        File Name
-                        <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
-                        </div>
-                    </th>
-                    <th scope="col">
-                        Owner
-                        <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
-                        </div>
-                    </th>
-                    <th scope="col">
-                        Uploaded At
-                        <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
-                        </div>
-                    </th>
-                    <th scope="col">
-                        Comment
-                        <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
-                        </div>
-                    </th>
-                    <th scope="col">
-                        Size
-                        <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
-                            <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
-                        </div>
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for upload in uploads %}
-                <tr>
-                    <td scope="row">
-                        <input class="form-check-input row-checkbox" type="checkbox">
-                    </td>
-                    <td scope="row">{{ forloop.counter }}</td>
-                    <td>{{ upload.get_simple_file_name}}</td>
-                    <td>{{ upload.owner }}</td>
-                    <td>{{ upload.uploaded_at }}</td>
-                    {% if upload.comments %}
-                        <td>{{ upload.comments }}</td>
-                        {% else %}
-                        <td>-</td>
-                    {% endif %}
-                    <td>{{ upload.file_size_mb }} Mb</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+<section>
+    <p class="d-inline-flex gap-1">
+        <button class="container" data-hover="Read More" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <div>
+                <i class="bi bi-plus-lg"></i>
+            </div>
+        </button>
+    </p>
+</section>
+
+<div class="collapse" id="collapseExample">
+    <div class="get-start">
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <button class="start-button" type="button" onclick="window.location='{% url 'upload_file' %}'">
+                Get Start
+            </button>
         </div>
-      </div>
+    </div>
+    <a href="#" class="btn-outline-light" role="presentation">
+        <div class="text-center">
+          <div class="row">
+            <div class="table-responsive">
+              <table class="table table-light table-bordered" id="dataTable">
+                <thead class="table-secondary">
+                    <tr>
+                        <th scope="col">
+                            <input class="form-check-input" type="checkbox" value="" id="selectAll">
+                        </th>
+
+                        <th scope="col">
+                            ID
+                            <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
+                            </div>
+                        </th>
+                        <th scope="col">
+                            File Name
+                            <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
+                            </div>
+                        </th>
+                        <th scope="col">
+                            Owner
+                            <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
+                            </div>
+                        </th>
+                        <th scope="col">
+                            Uploaded At
+                            <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
+                            </div>
+                        </th>
+                        <th scope="col">
+                            Comment
+                            <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
+                            </div>
+                        </th>
+                        <th scope="col">
+                            Size
+                            <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-up"></i></button>
+                                <button type="button" class="btn btn-sm icon-btn"><i class="bi bi-caret-down"></i></button>
+                            </div>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for upload in uploads %}
+                    <tr>
+                        <td scope="row">
+                            <input class="form-check-input row-checkbox" type="checkbox">
+                        </td>
+                        <td scope="row">{{ forloop.counter }}</td>
+                        <td>{{ upload.get_simple_file_name}}</td>
+                        <td>{{ upload.owner }}</td>
+                        <td>{{ upload.uploaded_at }}</td>
+                        {% if upload.comments %}
+                            <td>{{ upload.comments }}</td>
+                            {% else %}
+                            <td>-</td>
+                        {% endif %}
+                        <td>{{ upload.file_size_mb }} Mb</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+            </div>
+          </div>
+        </div>
+    </a>
 </div>
-</a>
-
-
-
+</body>
 
 {% endblock %}
