--- a/tasks/templates/upload_file.html
+++ b/tasks/templates/upload_file.html
@@ -5,9 +5,11 @@
 <script src="{% static '/js/upload_file.js' %}"></script>
 
 
-<div class="col-12 text-center">
-    <h1>PDF Upload</h1>
-</div>
+<head>
+    <title>Uploader</title>
+    <h1><strong>Uploader</strong></h1>
+</head>
+
 <div class="table-container shadow p-3 mb-5 bg-body-tertiary rounded" style='margin-left: 140px; margin-top: 50px'>
     <table class="pdf-table table-hover">
         <tbody>
