--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -3,6 +3,7 @@
 {% load notification_tags %}
 {% get_unread_notifications user as notifications %}
 {%endif%}
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <div class=" collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3">
 
@@ -36,7 +37,8 @@
         <li><a class="dropdown-item" href="{% url 'password' %}">Change password</a></li>
         <li><a class="dropdown-item" href="{% url 'preferences' %}">Preferences</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="{% url 'log_out' %}">Log out</a></li>
+        <li><a class="dropdown-item" href="{% url 'log_out' %}" style="display: flex; align-items: center;">Log out
+            <span class="material-symbols-outlined" style="padding: 5px; margin-left: 5px">logout</span></a></li>
       </ul>
     </li>
   </ul>
