--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -1,3 +1,7 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/sidebar.css' %}">
+<script src="{% static '/js/sidebar.js' %}"></script>
+
 <div id="sidebar" class=" sidebar col-sm-auto  p-3 sticky-top">
 
     <!-- A vertical navbar -->
@@ -46,6 +50,15 @@
                     <a class="nav-link text-center" aria-current="page" href="{% url 'shared_file_list' %}">Shared To Me</a>
                 {% endif %}
             </li>
-        </ul>
 
+            <li class="nav-item">
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault"><i id="mode-icon" class="bi bi-brightness-high"></i></label>
+                </div>
+            </li>
+
+        </ul>
 </div>
+
+
