--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -174,16 +174,16 @@ Default mode
 Dark mode  
 */
 .dark-mode {
-  background-color: #333;
+  background-color: rgb(211,211,211);
   color: #fff;
 }
 .dark-mode .dropdown-custom-theme  {
-  background-color: rgb(69, 69, 69) ;
+  background-color: rgb(211,211,211) ;
   color: rgb(76, 76, 76) !important;
 }
 
 .dark-mode .sidebar {
-  background-color: rgb(69, 69, 69) ;
+  background-color: rgb(211,211,211) ;
 }
 
 .dark-mode a {
