--- a/static/css/filelist.css
+++ b/static/css/filelist.css
@@ -10,6 +10,8 @@
     width: 200%;
     transition: opacity 0.5s ease, transform 0.5s ease;
     border: 1px solid #ccc;
+    background-color: rgb(255,255,255) ;
+
 }
 
 .input-container {
@@ -35,11 +37,17 @@
 
 .list-item{
     border: 10px;
-    border-radius: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    border-radius: 30px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
     display: block;
     margin: 10px;
     width: 600px;
+    background-color: rgb(255,255,255) ;
+
+}
+
+.text-list-item{
+    background-color: rgb(255,255,255);
 }
 
 .list-group-item {
@@ -87,4 +95,4 @@ textarea{
     margin-top: 2px;
 }
 
-html, body{background: rgb(236, 240, 241);}
+
