--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -25,7 +25,7 @@
                 <div class="list-group" id="fileList">
                     {% for upload in uploads %}
                     <div class="flex-column flex-md-row list-item" aria-current="true">
-                        <div class="p-3 gap-2 w-100">
+                        <div class="text-list-item p-3 gap-2 w-100">
                             <a href="{{ upload.file.url }}" class="list-group-item" data-upload-time="{{ upload.uploaded_at }}" target="_blank">
                                 <div class="item-content">
                                     <div class="d-flex flex-wrap w-100 justify-content-between align-items-center">
@@ -42,6 +42,7 @@
                                 </div>
                             </a>
                         </div>
+
 
                         <div class="button-container p-2">
                             <!--Delete PDF-->
