--- a/tasks/templates/upload_file.html
+++ b/tasks/templates/upload_file.html
@@ -2,9 +2,9 @@
 {% block content %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static '/css/upload_file.css' %}">
+<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <script src="{% static '/js/upload_file.js' %}"></script>
 
-<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <div class="relative min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8 relative items-center" style="background-color: white">
 	<div class="absolute bg-black opacity-5 inset-0 z-0"></div>
 	<div class="sm:max-w-lg w-full p-10 bg-white rounded-xl z-10">
@@ -38,6 +38,15 @@
                         </div>
                     </label>
                 </div>
+
+                 <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="ms-2 me-auto">
+                      <div class="fw-bold">{{  }}</div>
+                      Content for list item
+                    </div>
+                    <span class="badge text-bg-primary rounded-pill">14</span>
+                 </li>
+
                 <div class="flex justify-center">
                     <button type="submit" class="my-5 w-full flex justify-center bg-blue-500 text-gray-100 p-4  rounded-full tracking-wide font-semibold  focus:outline-none focus:shadow-outline hover:bg-blue-600 shadow-lg cursor-pointer transition ease-in duration-300">
                         Upload
